--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <title>DevelopGram</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="icon" href="icon/instagram.png" type="image/icon type">
+    <link rel="stylesheet" href="fonts.css">
 </head>
 <body onload="render() , renderFriends() , renderMenu() , renderNewFollower()">
     <div class="left" id="menu"></div>
